# litellm_aisix_architecture

./: .gitignore  .opencode  AGENTS.md  Cargo.toml  README.md  ai-gateway-main-process.drawio  aisix-backend-architecture.md
.agents/skills/architecture-skill-follow-through/: SKILL.md
.github/workflows/: ci.yml
aisix/: Cargo.toml  README.md  docker-compose.yml
aisix/config/: aisix-gateway.example.yaml
aisix/crates/aisix-auth/src/: extractor.rs
aisix/crates/aisix-cache/: Cargo.toml
aisix/crates/aisix-cache/src/: key.rs  memory.rs
aisix/crates/aisix-config/: Cargo.toml
aisix/crates/aisix-config/src/: compile.rs  etcd.rs  etcd_model.rs  lib.rs  loader.rs  snapshot.rs  startup.rs  watcher.rs
aisix/crates/aisix-config/tests/: admin_store.rs  etcd_loader.rs  etcd_watch.rs  snapshot_compile.rs  startup_config.rs
aisix/crates/aisix-config/tests/support/: etcd.rs
aisix/crates/aisix-core/: Cargo.toml
aisix/crates/aisix-core/src/: app_state.rs  context.rs
aisix/crates/aisix-observability/: Cargo.toml
aisix/crates/aisix-observability/src/: lib.rs  metrics.rs  tracing_init.rs
aisix/crates/aisix-policy/: Cargo.toml
aisix/crates/aisix-policy/src/: access.rs
aisix/crates/aisix-providers/: Cargo.toml
aisix/crates/aisix-providers/src/: anthropic.rs  anthropic_sse.rs  codec.rs  openai_compat.rs  registry.rs
aisix/crates/aisix-ratelimit/src/: concurrency.rs  lib.rs  service.rs
aisix/crates/aisix-router/src/: resolve.rs
aisix/crates/aisix-runtime/: Cargo.toml
aisix/crates/aisix-runtime/src/: bootstrap.rs
aisix/crates/aisix-runtime/tests/: bootstrap.rs
aisix/crates/aisix-runtime/tests/support/: etcd.rs
aisix/crates/aisix-server/: Cargo.toml
aisix/crates/aisix-server/src/: app.rs  health.rs  lib.rs  pipeline.rs  stream_proxy.rs
aisix/crates/aisix-server/src/admin/: apikeys.rs  auth.rs  mod.rs  models.rs  policies.rs  providers.rs
aisix/crates/aisix-server/src/handlers/: anthropic.rs  chat.rs  embeddings.rs
aisix/crates/aisix-server/src/pipeline/: authorization.rs  cache.rs  mod.rs  post_call.rs  rate_limit.rs  route_select.rs  stream_chunk.rs
aisix/crates/aisix-server/src/protocol/: anthropic.rs
aisix/crates/aisix-server/tests/: admin_reload.rs  anthropic_messages_non_stream.rs  anthropic_messages_stream.rs  auth_flow.rs  chat_non_stream.rs  embeddings.rs  rate_limit.rs  stream_chat.rs
aisix/crates/aisix-spend/src/: recorder.rs
aisix/crates/aisix-storage/: Cargo.toml
aisix/crates/aisix-storage/src/: counters.rs  redis_pool.rs
aisix/crates/aisix-types/: Cargo.toml
aisix/crates/aisix-types/src/: anthropic.rs  error.rs  lib.rs  request.rs  stream.rs  usage.rs
aisix/crates/aisix-types/tests/: transport_mode.rs
aisix/docs/: admin-api.md
aisix/docs/superpowers/plans/: 2026-04-09-admin-api-restful-support.md
aisix/scripts/: smoke-phase1.sh
config/: aisix-gateway.example.yaml
crates/aisix-auth/: Cargo.toml
crates/aisix-auth/src/: lib.rs
crates/aisix-cache/src/: key.rs  lib.rs
crates/aisix-config/: Cargo.toml
crates/aisix-config/src/: compile.rs  etcd_model.rs  lib.rs  loader.rs  snapshot.rs  startup.rs  watcher.rs
crates/aisix-config/tests/: etcd_loader.rs  etcd_watch.rs  snapshot_compile.rs  startup_config.rs
crates/aisix-config/tests/support/: etcd.rs
crates/aisix-core/: Cargo.toml
crates/aisix-core/src/: app_state.rs  lib.rs
crates/aisix-observability/src/: metrics.rs
crates/aisix-policy/src/: lib.rs
crates/aisix-providers/src/: anthropic.rs  lib.rs  openai_sse.rs
crates/aisix-ratelimit/: Cargo.toml
crates/aisix-ratelimit/src/: redis_check.rs  shadow.rs
crates/aisix-router/: Cargo.toml
crates/aisix-router/src/: lib.rs
crates/aisix-runtime/src/: lib.rs
crates/aisix-runtime/tests/: bootstrap.rs
crates/aisix-server/: Cargo.toml
crates/aisix-server/src/: app.rs  lib.rs  openapi.rs  ui.rs
crates/aisix-server/tests/: admin_reload.rs  anthropic_messages_stream.rs  chat_non_stream.rs  cors.rs  embeddings.rs  rate_limit.rs  stream_chat.rs
crates/aisix-server/ui/: app.mjs  app.test.mjs  index.html
crates/aisix-spend/: Cargo.toml
crates/aisix-spend/src/: event.rs  lib.rs
crates/aisix-storage/src/: lib.rs  redis_pool.rs
crates/aisix-types/src/: entities.rs  lib.rs
crates/aisix-types/tests/: anthropic_messages.rs
docs/: admin-api.md  architecture.md  litellm-feature-panorama.md  project-log.md  steps.md
scripts/: smoke-phase1.sh  test-smoke-phase1-overrides.sh
(+76 files in other folders)
