[workspace]
resolver = "2"
members = [
    "bin/aisix-gateway",
    "crates/aisix-auth",
    "crates/aisix-cache",
    "crates/aisix-config",
    "crates/aisix-core",
    "crates/aisix-observability",
    "crates/aisix-policy",
    "crates/aisix-providers",
    "crates/aisix-ratelimit",
    "crates/aisix-router",
    "crates/aisix-runtime",
    "crates/aisix-server",
    "crates/aisix-spend",
    "crates/aisix-storage",
    "crates/aisix-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
