[package]
name = "aisix-config"
version.workspace = true
edition.workspace = true

[dependencies]
aisix-types = { path = "../aisix-types" }
anyhow.workspace = true
arc-swap = "1"
etcd-client.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["time"] }
tracing = "0.1"

[dev-dependencies]
etcd-client = { workspace = true, features = ["pub-response-field"] }
tokio.workspace = true
