[package]
name = "aisix-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
aisix-config = { path = "../aisix-config" }
aisix-core = { path = "../aisix-core" }
aisix-storage = { path = "../aisix-storage" }
anyhow.workspace = true

[dev-dependencies]
etcd-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
